--- a/app/secretar.html
+++ b/app/secretar.html
@@ -17,15 +17,15 @@
         <a id="toggle-btn" target="blank" href="">Скрий/Покажи</a>
         {{#data}}
         <div class="data-list-item">
-            <h3 class="data-list-header">{{name}}</h3>
+            <h3 class="data-list-header">{{{name}}}</h3>
             <div class="data-list-items">
                 {{#data}}
                 <div class="data-list-item">
-                    <h4 class="data-list-header">{{name}}</h4>
+                    <h4 class="data-list-header">{{{name}}}</h4>
                     <div class="data-list-items">
                         {{#data}}
                         <div class="data-list-item">
-                            <div class="data-list-header">{{name}}</div>
+                            <div class="data-list-header">{{{name}}}</div>
                         </div>
                         {{/data}}
                     </div>
