added style to some divs for bullets

--- a/app/index.html
+++ b/app/index.html
@@ -19,7 +19,7 @@
                     <h1>Баскет</h1>
                     <p class="lead">
                         Здравейте, това е платформата за
-                        подготовка на баскетболни съдии {име}
+                        подготовка на баскетболни съдии basket-refs
                         Ако проявявате интерес за съдия, посетете раздел рефери.Ако проявявате
                         интерес за член на секретарския апарат, посетете раздел секретарски апарат
                     </p>
