added right/wrong answer image visualization

--- a/app/tests_4_to_6.html
+++ b/app/tests_4_to_6.html
@@ -52,70 +52,70 @@
         1.Когато на отбора, който е бил във владение на топката преди това се дава право да вкара топката в игра отвън в
         предното си поле и
         има 13 или по-малко секунди за атака, часовникът за 24 секунди:<br>
-        <input type="radio" name="question_1" value="a"> часовникът за 24 секунди се спира и се връща на 14 секунди<br>
-        <input type="radio" name="question_1" value="b"> часовникът за 24 секунди се спира, но не се връща на 24 секунди<br>
-        <input type="radio" name="question_1" value="c"> часовникът за 24 секунди се спира и се връща на 24
-        секунди<br><br>
+        <span class="answer"><input type="radio" name="question_1" value="a"> часовникът за 24 секунди се спира и се връща на 14 секунди</span><br>
+        <span class="answer"><input type="radio" name="question_1" value="b"> часовникът за 24 секунди се спира, но не се връща на 24 секунди</span><br>
+        <span class="answer"><input type="radio" name="question_1" value="c"> часовникът за 24 секунди се спира и се връща на 24
+        секунди</span><br><br>
     </div>
     <div class="question">2. Времеизмервачът пуска часовникът за игра, когато:<br>
-        <input type="radio" name="question_2" value="a">при изпълнение на “спорна топка” топката е редовно отплесната от
-        един от скачащите състезатели<br>
-        <input type="radio" name="question_2" value="b">след изпълнение на несполучлив последен или единствен
+        <span class="answer"><input type="radio" name="question_2" value="a">при изпълнение на “спорна топка” топката е редовно отплесната от
+        един от скачащите състезатели</span><br>
+        <span class="answer"><input type="radio" name="question_2" value="b">след изпълнение на несполучлив последен или единствен
         наказателен удар, след който топката продължава да е “жива” и докосне или е докосната от състезател на игралното
-        поле<br>
-        <input type="radio" name="question_2" value="c">при вкарване на топката в игра отвън тя докосне или е докосната
-        от състезател в игралното поле.<br>
-        <input type="radio" name="question_2" value="d">и трите отговора са верни<br><br>
+        поле</span><br>
+        <span class="answer"><input type="radio" name="question_2" value="c">при вкарване на топката в игра отвън тя докосне или е докосната
+        от състезател в игралното поле.</span><br>
+        <span class="answer"><input type="radio" name="question_2" value="d">и трите отговора са верни</span><br><br>
     </div>
     <div class="question">3. В протокола за дадена среща, лично нарушение на играч се отбелязва:<br>
-        <input type="radio" name="question_3" value="a">с буквата P без индекс за поредност на нарушението<br>
-        <input type="radio" name="question_3" value="b">с буквата D<br>
-        <input type="radio" name="question_3" value="c">с буквата P, като се вписва малък индекс долу вдясно за
-        поредността на нарушението за дадения играч<br><br>
+        <span class="answer"><input type="radio" name="question_3" value="a">с буквата P без индекс за поредност на нарушението</span><br>
+        <span class="answer"><input type="radio" name="question_3" value="b">с буквата D</span><br>
+        <span class="answer"><input type="radio" name="question_3" value="c">с буквата P, като се вписва малък индекс долу вдясно за
+        поредността на нарушението за дадения играч</span><br><br>
     </div>
     <div class="question">4. В протокола за дадена среща, отбелязан наказателен удар се означава<br>
-        <input type="radio" name="question_4" value="a">със запълнено кръгче<br>
-        <input type="radio" name="question_4" value="b">с диагонална чертичка,заедно с нанесен номер на играча,
-        отбелязал наказателния удар, в съседното празно квадратче<br>
-        <input type="radio" name="question_4" value="c">със запълнено кръгче,заедно с нанесен номер на играча, отбелязал
-        наказателния удар, в съседното празно квадратче<br><br>
+        <span class="answer"><input type="radio" name="question_4" value="a">със запълнено кръгче</span><br>
+        <span class="answer"><input type="radio" name="question_4" value="b">с диагонална чертичка,заедно с нанесен номер на играча,
+        отбелязал наказателния удар, в съседното празно квадратче</span><br>
+        <span class="answer"><input type="radio" name="question_4" value="c">със запълнено кръгче,заедно с нанесен номер на играча, отбелязал
+        наказателния удар, в съседното празно квадратче</span><br><br>
     </div>
     <div class="question">5. За загуба на даден отбор се дават:<br>
-        <input type="radio" name="question_5" value="a">0 точки<br>
-        <input type="radio" name="question_5" value="b">1 точка<br>
-        <input type="radio" name="question_5" value="c">2 точки<br><br>
+        <span class="answer"><input type="radio" name="question_5" value="a">0 точки</span><br>
+        <span class="answer"><input type="radio" name="question_5" value="b">1 точка</span><br>
+        <span class="answer"><input type="radio" name="question_5" value="c">2 точки</span><br><br>
     </div>
     <div class="question">6. Ако отборите не са изиграли всичките си срещи и ако 2 или повече отбори имат еднакъв
         резултат от победи и загуби:<br>
-        <input type="radio" name="question_6" value="a">най-голямата голова разлика от всички играни срещи на тези
-        отбори до този момент решава класирането<br>
-        <input type="radio" name="question_6" value="b">резултатът от директните двубои решава класирането<br>
-        <input type="radio" name="question_6" value="c">се играе бараж за определяне на това кой отбор да бъде по-напред
-        в класирането<br><br>
+        <span class="answer"><input type="radio" name="question_6" value="a">най-голямата голова разлика от всички играни срещи на тези
+        отбори до този момент решава класирането</span><br>
+        <span class="answer"><input type="radio" name="question_6" value="b">резултатът от директните двубои решава класирането</span><br>
+        <span class="answer"><input type="radio" name="question_6" value="c">се играе бараж за определяне на това кой отбор да бъде по-напред
+        в класирането</span><br><br>
     </div>
     <div class="question">7. Какъв тип нарушение се отсъжда с жеста от картинката:<br>
         <img src="resources/gestures-53.jpg"><br>
-        <input type="radio" name="question_7" value="a">стандартно лично нарушение(в защита)<br>
-        <input type="radio" name="question_7" value="b">техническо нарушение<br>
-        <input type="radio" name="question_7" value="c">неспортсменско нарушение<br>
-        <input type="radio" name="question_7" value="d">нарушение в нападение<br><br>
+        <span class="answer"><input type="radio" name="question_7" value="a">стандартно лично нарушение(в защита)</span><br>
+        <span class="answer"><input type="radio" name="question_7" value="b">техническо нарушение</span><br>
+        <span class="answer"><input type="radio" name="question_7" value="c">неспортсменско нарушение</span><br>
+        <span class="answer"><input type="radio" name="question_7" value="d">нарушение в нападение</span><br><br>
     </div>
     <div class="question">8. Коя от посочените грешки се отсъжда с жеста от картинката:<br>
         <img src="./resources/gestures-17.jpg"><br>
-        <input type="radio" name="question_8" value="a">двоен дрибъл<br>
-        <input type="radio" name="question_8" value="b">"крачки"<br>
-        <input type="radio" name="question_8" value="c">носена топка<br>
-        <input type="radio" name="question_8" value="d">върната топка<br><br>
+        <span class="answer"><input type="radio" name="question_8" value="a">двоен дрибъл</span><br>
+        <span class="answer"><input type="radio" name="question_8" value="b">"крачки"</span><br>
+        <span class="answer"><input type="radio" name="question_8" value="c">носена топка</span><br>
+        <span class="answer"><input type="radio" name="question_8" value="d">върната топка</span><br><br>
     </div>
     <div class="question">9. Коя от посочените грешки се отсъжда от съдията във видеото:<br>
         <video width="400" height="345" controls>
             <source src="./resources/violation.mp4" type="video/mp4">
         </video>
         <br>
-        <input type="radio" name="question_9" value="a">двоен дрибъл<br>
-        <input type="radio" name="question_9" value="b">"крачки"<br>
-        <input type="radio" name="question_9" value="c">носена топка<br>
-        <input type="radio" name="question_9" value="d">върната топка<br><br>
+        <span class="answer"><input type="radio" name="question_9" value="a">двоен дрибъл</span><br>
+        <span class="answer"><input type="radio" name="question_9" value="b">"крачки"</span><br>
+        <span class="answer"><input type="radio" name="question_9" value="c">носена топка</span><br>
+        <span class="answer"><input type="radio" name="question_9" value="d">върната топка</span><br><br>
         <br>
     </div>
 </div>
