--- a/app/tests_final.html
+++ b/app/tests_final.html
@@ -50,126 +50,126 @@
     <div id="test_result"></div>
     <div class="question">
         1. Колко състезатели точно трябва да са на игралното поле по време на игра за всеки отбор?<br>
-        <input type="radio" name="question_1" value="a">5<br>
-        <input type="radio" name="question_1" value="b">6<br>
-        <input type="radio" name="question_1" value="c">4<br>
+        <span class="answer"><input type="radio" name="question_1" value="a">5</span><br>
+        <span class="answer"><input type="radio" name="question_1" value="b">6</span><br>
+        <span class="answer"><input type="radio" name="question_1" value="c">4</span><br>
     </div>
     <div class="question">2. При нараняване на състезател, съдиите:<br>
-        <input type="radio" name="question_2" value="a">задължително трябва да прекъснат играта<br>
-        <input type="radio" name="question_2" value="b">трябва да се въздържат от прекъсване на игра при "жива" топка,
-        освен ако не трябва да се предпази наранен състезател<br>
-        <input type="radio" name="question_2" value="c">при никакви обстоятелства не трябва да прекъсват играта<br>
+        <span class="answer"><input type="radio" name="question_2" value="a">задължително трябва да прекъснат играта</span><br>
+        <span class="answer"><input type="radio" name="question_2" value="b">трябва да се въздържат от прекъсване на игра при "жива" топка,
+        освен ако не трябва да се предпази наранен състезател</span><br>
+        <span class="answer"><input type="radio" name="question_2" value="c">при никакви обстоятелства не трябва да прекъсват играта</span><br>
     </div>
     <div class="question">3. Треньорът трябва да представи списък с имената на участниците в срещата и капитана
         най-малко:<br>
-        <input type="radio" name="question_3" value="a">1 минута преди началото на срещата<br>
-        <input type="radio" name="question_3" value="b">5 минути преди началото на срещата<br>
-        <input type="radio" name="question_3" value="c">20 минути преди началото на срещата<br>
+        <span class="answer"><input type="radio" name="question_3" value="a">1 минута преди началото на срещата</span><br>
+        <span class="answer"><input type="radio" name="question_3" value="b">5 минути преди началото на срещата</span><br>
+        <span class="answer"><input type="radio" name="question_3" value="c">20 минути преди началото на срещата</span><br>
     </div>
     <div class="question">4. Топката има статут на "жива", когато:<br>
-        <input type="radio" name="question_4" value="a">по време на спорната топка напусне ръцете на старши съдията при
-        подхвърлянет о й<br>
-        <input type="radio" name="question_4" value="b">при изпълнение на наказателен удар топката е на разположение на
-        изпълнителя на наказател ния удар<br>
-        <input type="radio" name="question_4" value="c">при вкарване в игра отвън топката е на разположение на
-        състезателя, който ще я вкара в игра<br>
-        <input type="radio" name="question_4" value="d">и трите отговора са верни<br>
+        <span class="answer"><input type="radio" name="question_4" value="a">по време на спорната топка напусне ръцете на старши съдията при
+        подхвърлянето й</span><br>
+        <span class="answer"><input type="radio" name="question_4" value="b">при изпълнение на наказателен удар топката е на разположение на
+        изпълнителя на наказателния удар</span><br>
+        <span class="answer"><input type="radio" name="question_4" value="c">при вкарване в игра отвън топката е на разположение на
+        състезателя, който ще я вкара в игра</span><br>
+        <span class="answer"><input type="radio" name="question_4" value="d">и трите отговора са верни</span><br>
     </div>
     <div class="question">5. Когато топката докосне съдията, се отсъжда:<br>
-        <input type="radio" name="question_5" value="a">зависи от това коя част от пода е докосвал съдията в момента на
-        допир с топката<br>
-        <input type="radio" name="question_5" value="b">напускане на очертанията<br>
-        <input type="radio" name="question_5" value="c">нищо не се отсъжда - играта продължава<br>
+        <span class="answer"><input type="radio" name="question_5" value="a">зависи от това коя част от пода е докосвал съдията в момента на
+        допир с топката</span><br>
+        <span class="answer"><input type="radio" name="question_5" value="b">напускане на очертанията</span><br>
+        <span class="answer"><input type="radio" name="question_5" value="c">нищо не се отсъжда - играта продължава</span><br>
     </div>
     <div class="question">6. При извършване на грешка при вкарване на топката алтернативно в игра отвън:<br>
-        <input type="radio" name="question_6" value="a">топката се предоставя за вкарване отвън на противниковия отбор,
-        без да се сменя посоката на индикаторната стрелка<br>
-        <input type="radio" name="question_6" value="b">топката се предоставя за вкарване отвън на противниковия отбор и
-        незабавно се сменя посоката на индикаторната стрелка<br>
-        <input type="radio" name="question_6" value="c">дава се възможност на отбора, извършил грешката, да преповтори
-        вкарването на топката, като се сменя и посоката на индикаторната стрелка<br>
-        <input type="radio" name="question_6" value="d">дава се възможност на отбора, извършил грешката, да преповтори
-        вкарването на топката, без да се сменя посоката на индикаторната стрелка<br>
+        <span class="answer"><input type="radio" name="question_6" value="a">топката се предоставя за вкарване отвън на противниковия отбор,
+        без да се сменя посоката на индикаторната стрелка</span><br>
+        <span class="answer"><input type="radio" name="question_6" value="b">топката се предоставя за вкарване отвън на противниковия отбор и
+        незабавно се сменя посоката на индикаторната стрелка</span><br>
+        <span class="answer"><input type="radio" name="question_6" value="c">дава се възможност на отбора, извършил грешката, да преповтори
+        вкарването на топката, като се сменя и посоката на индикаторната стрелка</span><br>
+        <span class="answer"><input type="radio" name="question_6" value="d">дава се възможност на отбора, извършил грешката, да преповтори
+        вкарването на топката, без да се сменя посоката на индикаторната стрелка</span><br>
     </div>
     <div class="question">7. За позволено докосване на топката се счита<br>
-        <input type="radio" name="question_7" value="a">умишлено избиване с юмрук<br>
-        <input type="radio" name="question_7" value="b">умишлено изритване на топката с крак<br>
-        <input type="radio" name="question_7" value="c">случайно съприкосновение с коя да е част от крака<br>
-        <input type="radio" name="question_7" value="d">блокиране с коя да е част от крака<br>
+        <span class="answer"><input type="radio" name="question_7" value="a">умишлено избиване с юмрук</span><br>
+        <span class="answer"><input type="radio" name="question_7" value="b">умишлено изритване на топката с крак</span><br>
+        <span class="answer"><input type="radio" name="question_7" value="c">случайно съприкосновение с коя да е част от крака</span><br>
+        <span class="answer"><input type="radio" name="question_7" value="d">блокиране с коя да е част от крака</span><br>
     </div>
     <div class="question">8. При желание за смяна от кой да е от отборите, тя трябва:<br>
-        <input type="radio" name="question_8" value="a">от треньора<br>
-        <input type="radio" name="question_8" value="b">от помощник-треньора<br>
-        <input type="radio" name="question_8" value="c">от капитана на отбора<br>
-        <input type="radio" name="question_8" value="d">да бъде поискана от играча, който ще влезе от скамейката<br><br>
+        <span class="answer"><input type="radio" name="question_8" value="a">от треньора</span><br>
+        <span class="answer"><input type="radio" name="question_8" value="b">от помощник-треньора</span><br>
+        <span class="answer"><input type="radio" name="question_8" value="c">от капитана на отбора</span><br>
+        <span class="answer"><input type="radio" name="question_8" value="d">да бъде поискана от играча, който ще влезе от скамейката</span><br><br>
     </div>
     <div class="question"> 9.Когато на отбора, който е бил във владение на топката преди това се дава право да вкара
         топката в игра отвън в предното си поле и
         има 13 или по-малко секунди за атака, часовникът за 24 секунди:<br>
-        <input type="radio" name="question_9" value="a"> часовникът за 24 секунди се спира и се връща на 14 секунди<br>
-        <input type="radio" name="question_9" value="b"> часовникът за 24 секунди се спира, но не се връща на 24 секунди<br>
-        <input type="radio" name="question_9" value="c"> часовникът за 24 секунди се спира и се връща на 24
-        секунди<br><br>
+        <span class="answer"><input type="radio" name="question_9" value="a"> часовникът за 24 секунди се спира и се връща на 14 секунди</span><br>
+        <span class="answer"><input type="radio" name="question_9" value="b"> часовникът за 24 секунди се спира, но не се връща на 24 секунди</span><br>
+        <span class="answer"><input type="radio" name="question_9" value="c"> часовникът за 24 секунди се спира и се връща на 24
+        секунди</span><br><br>
     </div>
     <div class="question">10. Времеизмервачът пуска часовникът за игра, когато:<br>
-        <input type="radio" name="question_10" value="a">при изпълнение на “спорна топка” топката е редовно отплесната
-        от един от скачащите състезатели<br>
-        <input type="radio" name="question_10" value="b">след изпълнение на несполучлив последен или единствен
+        <span class="answer"><input type="radio" name="question_10" value="a">при изпълнение на “спорна топка” топката е редовно отплесната
+        от един от скачащите състезатели</span><br>
+        <span class="answer"><input type="radio" name="question_10" value="b">след изпълнение на несполучлив последен или единствен
         наказателен удар, след който топката продължава да е “жива” и докосне или е докосната от състезател на игралното
-        поле<br>
-        <input type="radio" name="question_10" value="c">при вкарване на топката в игра отвън тя докосне или е докосната
-        от състезател в игралното поле.<br>
-        <input type="radio" name="question_10" value="d">и трите отговора са верни<br><br>
+        поле</span><br>
+        <span class="answer"><input type="radio" name="question_10" value="c">при вкарване на топката в игра отвън тя докосне или е докосната
+        от състезател в игралното поле.</span><br>
+        <span class="answer"><input type="radio" name="question_10" value="d">и трите отговора са верни</span><br><br>
     </div>
     <div class="question">11. В протокола за дадена среща, лично нарушение на играч се отбелязва:<br>
-        <input type="radio" name="question_11" value="a">с буквата P без индекс за поредност на нарушението<br>
-        <input type="radio" name="question_11" value="b">с буквата D<br>
-        <input type="radio" name="question_11" value="c">с буквата P, като се вписва малък индекс долу вдясно за
-        поредността на нарушението за дадения играч<br><br>
+        <span class="answer"><input type="radio" name="question_11" value="a">с буквата P без индекс за поредност на нарушението</span><br>
+        <span class="answer"><input type="radio" name="question_11" value="b">с буквата D</span><br>
+        <span class="answer"><input type="radio" name="question_11" value="c">с буквата P, като се вписва малък индекс долу вдясно за
+        поредността на нарушението за дадения играч</span><br><br>
     </div>
     <div class="question"> 12. В протокола за дадена среща, отбелязан наказателен удар се означава<br>
-        <input type="radio" name="question_12" value="a">със запълнено кръгче<br>
-        <input type="radio" name="question_12" value="b">с диагонална чертичка,заедно с нанесен номер на играча,
-        отбелязал наказателния удар, в съседното празно квадратче<br>
-        <input type="radio" name="question_12" value="c">със запълнено кръгче,заедно с нанесен номер на играча,
-        отбелязал наказателния удар, в съседното празно квадратче<br><br>
+        <span class="answer"><input type="radio" name="question_12" value="a">със запълнено кръгче</span><br>
+        <span class="answer"><input type="radio" name="question_12" value="b">с диагонална чертичка,заедно с нанесен номер на играча,
+        отбелязал наказателния удар, в съседното празно квадратче</span><br>
+        <span class="answer"><input type="radio" name="question_12" value="c">със запълнено кръгче,заедно с нанесен номер на играча,
+        отбелязал наказателния удар, в съседното празно квадратче</span><br><br>
     </div>
     <div class="question"> 13. За загуба на даден отбор се дават:<br>
-        <input type="radio" name="question_13" value="a">0 точки<br>
-        <input type="radio" name="question_13" value="b">1 точка<br>
-        <input type="radio" name="question_13" value="c">2 точки<br><br>
+        <span class="answer"><input type="radio" name="question_13" value="a">0 точки</span><br>
+        <span class="answer"><input type="radio" name="question_13" value="b">1 точка</span><br>
+        <span class="answer"><input type="radio" name="question_13" value="c">2 точки</span><br><br>
     </div>
     <div class="question">14. Ако отборите не са изиграли всичките си срещи и ако 2 или повече отбори имат еднакъв
         резултат от победи и загуби:<br>
-        <input type="radio" name="question_14" value="a">най-голямата голова разлика от всички играни срещи на тези
-        отбори до този момент решава класирането<br>
-        <input type="radio" name="question_14" value="b">резултатът от директните двубои решава класирането<br>
-        <input type="radio" name="question_14" value="c">се играе бараж за определяне на това кой отбор да бъде
-        по-напред в класирането<br><br>
+        <span class="answer"><input type="radio" name="question_14" value="a">най-голямата голова разлика от всички играни срещи на тези
+        отбори до този момент решава класирането</span><br>
+        <span class="answer"><input type="radio" name="question_14" value="b">резултатът от директните двубои решава класирането</span><br>
+        <span class="answer"><input type="radio" name="question_14" value="c">се играе бараж за определяне на това кой отбор да бъде
+        по-напред в класирането</span><br><br>
     </div>
     <div class="question"> 15. Какъв тип нарушение се отсъжда с жеста от картинката:<br>
         <img src="resources/gestures-53.jpg"><br>
-        <input type="radio" name="question_15" value="a">стандартно лично нарушение(в защита)<br>
-        <input type="radio" name="question_15" value="b">техническо нарушение<br>
-        <input type="radio" name="question_15" value="c">неспортсменско нарушение<br>
-        <input type="radio" name="question_15" value="d">нарушение в нападение<br><br>
+        <span class="answer"><input type="radio" name="question_15" value="a">стандартно лично нарушение(в защита)</span><br>
+        <span class="answer"><input type="radio" name="question_15" value="b">техническо нарушение</span><br>
+        <span class="answer"><input type="radio" name="question_15" value="c">неспортсменско нарушение</span><br>
+        <span class="answer"><input type="radio" name="question_15" value="d">нарушение в нападение</span><br><br>
     </div>
     <div class="question"> 16. Коя от посочените грешки се отсъжда с жеста от картинката:<br>
         <img src="./resources/gestures-17.jpg"><br>
-        <input type="radio" name="question_16" value="a">двоен дрибъл<br>
-        <input type="radio" name="question_16" value="b">"крачки"<br>
-        <input type="radio" name="question_16" value="c">носена топка<br>
-        <input type="radio" name="question_16" value="d">върната топка<br><br>
+        <span class="answer"><input type="radio" name="question_16" value="a">двоен дрибъл</span><br>
+        <span class="answer"><input type="radio" name="question_16" value="b">"крачки"</span><br>
+        <span class="answer"><input type="radio" name="question_16" value="c">носена топка</span><br>
+        <span class="answer"><input type="radio" name="question_16" value="d">върната топка</span><br><br>
     </div>
     <div class="question"> 17. Коя от посочените грешки се отсъжда от съдията във видеото:<br>
         <video width="400" height="345" controls>
             <source src="./resources/violation.mp4" type="video/mp4">
         </video>
         <br>
-        <input type="radio" name="question_17" value="a">двоен дрибъл<br>
-        <input type="radio" name="question_17" value="b">"крачки"<br>
-        <input type="radio" name="question_17" value="c">носена топка<br>
-        <input type="radio" name="question_17" value="d">върната топка<br><br>
+        <span class="answer"><input type="radio" name="question_17" value="a">двоен дрибъл</span><br>
+        <span class="answer"><input type="radio" name="question_17" value="b">"крачки"</span><br>
+        <span class="answer"><input type="radio" name="question_17" value="c">носена топка</span><br>
+        <span class="answer"><input type="radio" name="question_17" value="d">върната топка</span><br><br>
         <br>
     </div>
 </div>
