--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Баскет</title>
-    <link rel="stylesheet" href="https://bootswatch.com/4/darkly/bootstrap.min.css" media="screen">
+    <link rel="stylesheet" href="https://bootswatch.com/4/journal/bootstrap.min.css" media="screen">    
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <link rel="stylesheet" href="./styles/main.css" media="screen">
     <script src="./scripts/lib/csi.min.js"></script>
