--- a/app/secretar.html
+++ b/app/secretar.html
@@ -4,7 +4,7 @@
 <head>
     <title>Секретарски апарат</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <link rel="stylesheet" href="https://bootswatch.com/4/darkly/bootstrap.min.css" media="screen">
+    <link rel="stylesheet" href="https://bootswatch.com/4/journal/bootstrap.min.css" media="screen">
     <link rel="stylesheet" href="./styles/main.css" media="screen">
     <script src="./scripts/lib/csi.min.js"></script>
     <script src="./scripts/lib/mustache.js"></script>
