--- a/app/index.html
+++ b/app/index.html
@@ -19,9 +19,9 @@
                     <h1>Баскет</h1>
                     <p class="lead">
                         Здравейте, това е платформата за
-                        подготовка на баскетболни съдии basket-refs
-                        Ако проявявате интерес за съдия, посетете раздел рефери.Ако проявявате
-                        интерес за член на секретарския апарат, посетете раздел секретарски апарат
+                        подготовка на баскетболни съдии basket-refs.
+                        Ако проявявате интерес за съдия, посетете <a href="refer.html">Рефери</a> . Ако проявявате
+                        интерес за член на секретарския апарат, посетете <a href="secretar.html">Секретарски апарат</a> .
                     </p>
                 </div>
             </div>
